--- a/hailo_apps/python/gen_ai_apps/agent_tools_example/tools/elevator/config.yaml
+++ b/hailo_apps/python/gen_ai_apps/agent_tools_example/tools/elevator/config.yaml
@@ -21,88 +21,24 @@ floors:
   0:
     name: "Staff & Utilities (Basement)"
     description: "The infrastructural and unseen level containing the boiler room, Oompa Loompa staff quarters, and other utilities necessary for maintenance and operation."
-    keywords:
-      - "maintenance"
-      - "boiler room"
-      - "staff quarters"
-      - "utilities"
-      - "basement"
-      - "underground"
-      - "oompa loompas"
-      - "oompa loompa"
-      - "lowest floor"
   1:
     name: "The Chocolate Room"
     description: "The vast, edible garden floor. Features the Chocolate River and Waterfall. The starting point of the tour, famous for the elimination of Augustus Gloop, who fell into the river and was sucked up the pipe toward the Fudge Room."
-    keywords:
-      - "chocolate river"
-      - "waterfall"
-      - "edible grass"
-      - "augustus gloop"
-      - "fudge room"
-      - "first floor"
-      - "ground floor"
-      - "chocolate room"
   2:
     name: "The Inventing Room"
     description: "A laboratory filled with machines and bubbling pots where experimental sweets are created. This floor features the Everlasting Gobstopper and the disastrous Three-Course Dinner Chewing Gum. Violet Beauregarde was eliminated here by swelling up into a blueberry."
-    keywords:
-      - "inventing"
-      - "everlasting gobstopper"
-      - "gobstopper"
-      - "three-course gum"
-      - "violet"
-      - "blueberry"
-      - "blue berry"
-      - "swelling"
-      - "chewing gum"
-      - "innovation"
-      - "inventing room"
-      - "laboratory"
-      - "lab"
-      - "second floor"
   3:
     name: "The Fizzy Lifting Drinks Room"
     description: "The room housing the Fizzy Lifting Drinks, famous for the scene where Charlie and Grandpa Joe risk being chopped up by the ceiling fan after defying gravity and floating up. Ideal for requests about non-standard beverages or floating."
-    keywords:
-      - "floating"
-      - "fizzy lifting drinks"
-      - "burping"
-      - "ceiling fan"
-      - "soda"
-      - "beverages"
-      - "float"
-      - "fly"
   4:
     name: "The Nut Room"
     description: "Dedicated to quality control where hundreds of trained Squirrels shell walnuts to find 'good' and 'bad' nuts. Veruca Salt was eliminated here, judged a 'bad nut' by the squirrels and sent down the Rubbish Chute."
-    keywords:
-      - "squirrels"
-      - "squirrel"
-      - "veruca salt"
-      - "bad egg"
-      - "rubbish chute"
-      - "nuts"
-      - "quality control"
-      - "i want it now"
-      - "nutrom"
-      - "walnuts"
   5:
     name: "The Television-Chocolate Room"
     description: "A sterile, white room containing the powerful Wonkavision camera/teleporter. It develops a way to send chocolate bars through television waves. Mike Teavee was eliminated here after shrinking himself down to a tiny size."
-    keywords:
-      - "tv"
-      - "television"
-      - "wonkavision"
-      - "teleporter"
-      - "shrinking"
-      - "top floor"
-      - "highest floor"
-      - "television room"
-      - "tv room"
 
 output_format:
-  tool_call: "XML-wrapped JSON: <tool_call>{...}</tool_call>"
+  tool_call: "XML-wrapped JSON:  <tool_call>{...}</tool_call>"
   direct_response: "Confirm destination"
   after_tool: "Announce arrival at floor"
 
@@ -116,7 +52,7 @@ tool_instructions: |
     Description: The infrastructural and unseen level containing the boiler room, Oompa Loompa staff quarters, and other utilities necessary for maintenance and operation.
 
   Floor 1: The Chocolate Room
-    Description: The vast, edible garden floor. Features the Chocolate River and Waterfall. The starting point of the tour, famous for the elimination of Augustus Gloop, who fell into the river and was sucked up the pipe toward the Fudge Room.
+    Description: The vast, edible garden floor. Features the Chocolate River and Waterfall. This is the FIRST FLOOR (Ground Floor). The starting point of the tour, famous for the elimination of Augustus Gloop, who fell into the river and was sucked up the pipe toward the Fudge Room.
 
   Floor 2: The Inventing Room
     Description: A laboratory filled with machines and bubbling pots where experimental sweets are created. This floor features the Everlasting Gobstopper and the disastrous Three-Course Dinner Chewing Gum. Violet Beauregarde was eliminated here by swelling up into a blueberry.
@@ -128,7 +64,7 @@ tool_instructions: |
     Description: Dedicated to quality control where hundreds of trained Squirrels shell walnuts to find 'good' and 'bad' nuts. Veruca Salt was eliminated here, judged a 'bad nut' by the squirrels and sent down the Rubbish Chute.
 
   Floor 5: The Television-Chocolate Room
-    Description: A sterile, white room containing the powerful Wonkavision camera/teleporter. It develops a way to send chocolate bars through television waves. Mike Teavee was eliminated here after shrinking himself down to a tiny size.
+    Description: A sterile, white room containing the powerful Wonkavision camera/teleporter. It develops a way to send chocolate bars through television waves. This is the UPPER/HIGHEST FLOOR. Mike Teavee was eliminated here after shrinking himself down to a tiny size.
 
   YOUR TASK: Interpret the user's request and call this tool with the integer floor number or relative movement.
   Match room names, character names, or location descriptions to the correct floor.
@@ -140,6 +76,7 @@ tool_instructions: |
   - Character names mentioned in descriptions
   - Room descriptions
   - Natural language descriptions (e.g., "top floor" → Floor 5, "basement" → Floor 0)
+  - IMPORTANT: "First floor" is Floor 1 (Chocolate Room), NOT Floor 0.
 
   RELATIVE MOVEMENTS: When the user requests to move up or down a certain number of floors, use the 'relative_floor' parameter:
   - "go up 2 floors" → relative_floor: 2
@@ -148,7 +85,7 @@ tool_instructions: |
   - "move down 3 floors" → relative_floor: -3
   - Positive integers = move up, negative integers = move down
   - The tool will automatically calculate the target floor based on the current position
-  - If the relative movement would result in an invalid floor, the tool will return an error
+  - If the relative movement would result in an invalid floor, the tool will report the limit has been reached instead of an error
 
   DEFAULT OPTION: If the user requests a floor number outside the available range (0-5), or if you cannot determine which floor
   the user wants (ambiguous request), set 'default' to true.
@@ -163,47 +100,11 @@ few_shot_examples:
       arguments:
         floor: 1
 
-  - user: "Go to where Violet turned into a blueberry"
-    tool_call:
-      name: "elevator"
-      arguments:
-        floor: 2
-
-  - user: "I want to float"
-    tool_call:
-      name: "elevator"
-      arguments:
-        floor: 3
-
   - user: "Take me to the squirrels"
     tool_call:
       name: "elevator"
       arguments:
         floor: 4
-
-  - user: "Take me to the top floor"
-    tool_call:
-      name: "elevator"
-      arguments:
-        floor: 5
-
-  - user: "Go to the television room"
-    tool_call:
-      name: "elevator"
-      arguments:
-        floor: 5
-
-  - user: "Take me to the basement"
-    tool_call:
-      name: "elevator"
-      arguments:
-        floor: 0
-
-  - user: "Go to floor 0"
-    tool_call:
-      name: "elevator"
-      arguments:
-        floor: 0
 
   # Relative movement examples
   - user: "Go up 2 floors"
@@ -226,12 +127,6 @@ few_shot_examples:
         default: true
 
   # Default option examples - ambiguous or unclear requests
-  - user: "Take me to the turn floor"
-    tool_call:
-      name: "elevator"
-      arguments:
-        default: true
-
   - user: "I want to go somewhere fun"
     tool_call:
       name: "elevator"
