--- a/hailo_apps/config/resources_config.yaml
+++ b/hailo_apps/config/resources_config.yaml
@@ -20,55 +20,231 @@
 #   images: [list of image entries with name and url]
 
 # Shared videos for all apps
+# Tags use app names only (no _p/_s suffixes)
 videos:
   - name: example.mp4
     source: s3
+    tag:
+      - detection
+      - simple_detection
+      - instance_segmentation
+      - pose_estimation
+      - semantic_segmentation
+      - classifier
+      - depth
   - name: example_640.mp4
     source: s3
+    tag:
+      - detection
+      - simple_detection
+      - instance_segmentation
+      - pose_estimation
+      - semantic_segmentation
+      - classifier
+      - depth
   - name: face_recognition.mp4
     source: s3
+    tag:
+      - face_recognition
   - name: ocr.mp4
     source: s3
+    tag:
+      - paddle_ocr
   - name: tiling_visdrone_720p.mp4
     source: s3
+    tag:
+      - tiling
   - name: barcode.mp4
     source: s3
+    tag:
+      - detection
   - name: clip_example.mp4
     source: s3
-#  - name: full_mov_slow.mp4
-#    source: s3
+    tag:
+      - clip
+  - name: full_mov_slow.mp4
+    source: s3
+    tag:
+      - detection
+      - simple_detection
+      - instance_segmentation
+      - pose_estimation
+      - semantic_segmentation
+      - classifier
+      - onnxrt_hailo_pipeline
+  - name: lane_detection.mp4
+    source: s3
+    tag:
+      - lane_detection
+  - name: walk_in_room.mp4
+    source: s3
+    tag:
+      - depth
+      - depth_estimation_mono
 
 # Shared images for all apps
+# Tags use app names only (no _p/_s suffixes)
 images:
   - name: dog_bicycle.jpg
     source: s3
+    tag:
+      - detection
+      - instance_segmentation
+      - pose_estimation
   - name: zidane.jpg
     url: https://ultralytics.com/images/zidane.jpg
+    tag:
+      - detection
+      - instance_segmentation
+      - pose_estimation
   - name: bus.jpg
     source: s3
+    tag:
+      - detection
+      - instance_segmentation
+      - pose_estimation
   - name: input_image.png
     source: s3
+    tag:
+      - detection
+      - instance_segmentation
+      - pose_estimation
   - name: ocr_img1.png
     source: s3
+    tag:
+      - paddle_ocr
   - name: ocr_img2.png
     source: s3
+    tag:
+      - paddle_ocr
+  - name: dota_image.png
+    source: s3
+    tag:
+      - oriented_object_detection
+  - name: tree_branches.png
+    source: s3
+    tag:
+      - super_resolution
+  - name: apple.jpg
+    source: s3
+    tag:
+      - depth_estimation_mono
 
 # Shared JSON config files for all apps
+# Tags use app names only (no _p/_s suffixes)
 json:
   - name: hailo_4_classes.json
     source: s3
+    tag:
+      - tiling
+      - detection
   - name: scrfd.json
     source: s3
+    tag:
+      - face_recognition
   - name: yolov5m_seg.json
     source: s3
+    tag:
+      - instance_segmentation
   - name: yolov5n_seg.json
     source: s3
+    tag:
+      - instance_segmentation
   - name: visdrone.json
     source: s3
+    tag:
+      - tiling
   - name: barcode_labels.json
     source: s3
+    tag:
+      - detection
 
-detection:
+
+classifier:
+  models:
+    hailo8:
+      default:
+        - name: fastvit_sa12
+          source: mz
+      extra:
+        - name: hardnet39ds
+          source: mz
+        - name: hardnet68
+          source: mz
+        - name: resnet_v1_18
+          source: mz
+        - name: resnet_v1_34
+          source: mz
+        - name: resnet_v1_50
+          source: mz
+    hailo8l:
+      default:
+        - name: fastvit_sa12
+          source: mz
+      extra:
+        - name: hardnet39ds
+          source: mz
+        - name: hardnet68
+          source: mz
+        - name: resnet_v1_18
+          source: mz
+        - name: resnet_v1_34
+          source: mz
+        - name: resnet_v1_50
+          source: mz
+    hailo10h:
+      default:
+        - name: fastvit_sa12
+          source: mz
+      extra:
+        - name: hardnet39ds
+          source: mz
+        - name: hardnet68
+          source: mz
+        - name: resnet_v1_18
+          source: mz
+        - name: resnet_v1_34
+          source: mz
+        - name: resnet_v1_50
+          source: mz
+
+semantic_segmentation:
+  models:
+    hailo8:
+      default:
+        - name: fcn8_resnet_v1_18
+          source: mz
+      extra:
+        - name: segformer_b0_bn
+          source: mz
+        - name: stdc1
+          source: mz
+        - name: deeplab_v3_mobilenet_v2_wo_dilation
+          source: mz
+    hailo8l:
+      default:
+        - name: fcn8_resnet_v1_18
+          source: mz
+      extra:
+        - name: segformer_b0_bn
+          source: mz
+        - name: stdc1
+          source: mz
+        - name: deeplab_v3_mobilenet_v2_wo_dilation
+          source: mz
+    hailo10h:
+      default:
+        - name: fcn8_resnet_v1_18
+          source: mz
+      extra:
+        - name: segformer_b0_bn
+          source: mz
+        - name: stdc1
+          source: mz
+        - name: deeplab_v3_mobilenet_v2_wo_dilation
+          source: mz
+
+detection: &detection_app
   models:
     hailo8:
       default:
@@ -79,11 +255,45 @@ detection:
           source: mz
         - name: yolov8s
           source: mz
+        - name: yolov5s
+          source: mz
+        - name: yolov5m
+          source: mz
+        - name: yolov6n
+          source: mz
+        - name: yolov7
+          source: mz
+        - name: yolov7x
+          source: mz
+        - name: yolov8n
+          source: mz
+        - name: yolov8l
+          source: mz
+        - name: yolov8x
+          source: mz
+        - name: yolov9c
+          source: mz
+        - name: yolov10n
+          source: mz
+        - name: yolov10s
+          source: mz
+        - name: yolov10b
+          source: mz
+        - name: yolov10x
+          source: mz
         - name: yolov11n
           source: mz
         - name: yolov11s
           source: mz
-        - name: yolov8n
+        - name: yolov11m
+          source: mz
+        - name: yolov11l
+          source: mz
+        - name: yolov11x
+          source: mz
+        - name: yolov11n
+          source: mz
+        - name: yolov11s
           source: mz
         - name: yolov8s-hailo8-barcode
           url: https://hailo-csdata.s3.eu-west-2.amazonaws.com/resources/hefs/h8l_rpi/yolov8s-hailo8l-barcode.hef
@@ -93,15 +303,45 @@ detection:
         - name: yolov8s
           source: mz
       extra:
+        - name: yolov5s
+          source: mz
+        - name: yolov5m
+          source: mz
         - name: yolov6n
           source: mz
+        - name: yolov7
+          source: mz
+        - name: yolov7x
+          source: mz
         - name: yolov5m_wo_spp
+          source: mz
+        - name: yolov8n
+          source: mz
+        - name: yolov8m
+          source: mz
+        - name: yolov8l
+          source: mz
+        - name: yolov8x
+          source: mz
+        - name: yolov9c
+          source: mz
+        - name: yolov10n
+          source: mz
+        - name: yolov10s
+          source: mz
+        - name: yolov10b
+          source: mz
+        - name: yolov10x
           source: mz
         - name: yolov11n
           source: mz
         - name: yolov11s
           source: mz
-        - name: yolov8n
+        - name: yolov11m
+          source: mz
+        - name: yolov11l
+          source: mz
+        - name: yolov11x
           source: mz
         - name: yolov8s-hailo8l-barcode
           url: https://hailo-csdata.s3.eu-west-2.amazonaws.com/resources/hefs/h8l_rpi/yolov8s-hailo8l-barcode.hef
@@ -113,14 +353,47 @@ detection:
       extra:
         - name: yolov5m_wo_spp
           source: mz
+        - name: yolov5s
+          source: mz
+        - name: yolov5m
+          source: mz
+        - name: yolov6n
+          source: mz
+        - name: yolov7
+          source: mz
+        - name: yolov7x
+          source: mz
         - name: yolov8s
+          source: mz
+        - name: yolov8n
+          source: mz
+        - name: yolov8l
+          source: mz
+        - name: yolov8x
+          source: mz
+        - name: yolov9c
+          source: mz
+        - name: yolov10n
+          source: mz
+        - name: yolov10s
+          source: mz
+        - name: yolov10b
+          source: mz
+        - name: yolov10x
           source: mz
         - name: yolov11n
           source: mz
         - name: yolov11s
           source: mz
-        - name: yolov8n
+        - name: yolov11m
           source: mz
+        - name: yolov11l
+          source: mz
+        - name: yolov11x
+          source: mz
+
+# Standalone app uses the same model set and defaults as the pipeline app
+object_detection: *detection_app
 
 simple_detection:
   models:
@@ -164,13 +437,56 @@ instance_segmentation:
       default:
         - name: yolov5m_seg
           source: mz
+      extra:
+        - name: yolov5l_seg
+          source: mz
+        - name: yolov5n_seg
+          source: mz
+        - name: yolov5s_seg
+          source: mz
+        - name: yolov8m_seg
+          source: mz
+        - name: yolov8n_seg
+          source: mz
+        - name: yolov8s_seg
+          source: mz
+        - name: yolov5m_seg_with_nms
+          source: s3
+        - name: fast_sam_s
+          source: s3
     hailo8l:
       default:
         - name: yolov5n_seg
           source: mz
+      extra:
+        - name: yolov5l_seg
+          source: mz
+        - name: yolov5m_seg
+          source: mz
+        - name: yolov5s_seg
+          source: mz
+        - name: yolov8m_seg
+          source: mz
+        - name: yolov8n_seg
+          source: mz
+        - name: yolov8s_seg
+          source: mz
     hailo10h:
       default:
         - name: yolov5m_seg
+          source: mz
+      extra:
+        - name: yolov5l_seg
+          source: mz
+        - name: yolov5n_seg
+          source: mz
+        - name: yolov5s_seg
+          source: mz
+        - name: yolov8m_seg
+          source: mz
+        - name: yolov8n_seg
+          source: mz
+        - name: yolov8s_seg
           source: mz
 
 pose_estimation:
@@ -194,7 +510,7 @@ pose_estimation:
         - name: yolov8s_pose
           source: mz
 
-depth:
+depth: &depth_app
   models:
     hailo8:
       default:
@@ -208,6 +524,37 @@ depth:
       default:
         - name: scdepthv3
           source: mz
+
+# Standalone app uses the same model set and defaults as the pipeline app
+depth_estimation_mono: *depth_app
+
+depth_estimation_stereo:
+  models:
+    hailo8:
+      default:
+        - name: stereonet
+          source: s3
+    hailo8l:
+      default:
+        - name: stereonet
+          source: s3
+    hailo10h:
+      default:
+        - name: stereonet
+          source: s3
+
+onnxrt_hailo_pipeline:
+  models:
+    hailo8:
+      default:
+        - name: yolov8m_seg
+          source: mz
+    hailo8l:
+      default:
+        - name: yolov8m_seg
+          source: mz
+    hailo10h:
+      default: None
 
 tiling:
   models:
@@ -248,7 +595,11 @@ paddle_ocr:
         - name: ocr
           source: s3
     hailo8l:
-      default: None
+      default:
+        - name: ocr_det
+          source: s3
+        - name: ocr
+          source: s3
     hailo10h:
       default:
         - name: ocr_det
@@ -274,13 +625,30 @@ super_resolution:
     hailo8:
       default:
         - name: real_esrgan_x2
-          source: s3
+          source: mz
     hailo8l:
-      default: None
+      default:
+        - name: real_esrgan_x2
+          source: mz
     hailo10h:
       default:
         - name: real_esrgan_x2
           source: mz
+
+oriented_object_detection:
+  models:
+    hailo8:
+      default:
+        - name: yolo11s_obb
+          source: s3
+    hailo8l:
+      default:
+        - name: yolo11s_obb
+          source: s3
+    hailo10h:
+      default:
+        - name: yolo11s_obb
+          source: s3
 
 reid_multisource:
   models:
@@ -369,3 +737,20 @@ clip:
           source: mz
         - name: hailo_yolov8n_4_classes_vga
           source: mz
+
+
+#-------------------------------------------------------------------------------
+# METADATA
+#-------------------------------------------------------------------------------
+metadata:
+  # S3 base URLs for dynamic URL construction
+  s3_endpoints:
+    cs_bucket: "https://hailo-csdata.s3.eu-west-2.amazonaws.com"
+    model_zoo_h8: "https://hailo-model-zoo.s3.eu-west-2.amazonaws.com/ModelZoo/Compiled"
+    gen_ai_mz: "https://dev-public.hailo.ai"
+  
+  # Model Zoo version mapping
+  model_zoo_versions:
+    hailo8: "v2.17.0"
+    hailo8l: "v2.17.0"
+    hailo10h: "v5.1.1"
