--- a/hailo_apps/cpp/depth_estimation_mono/CMakeLists.txt
+++ b/hailo_apps/cpp/depth_estimation_mono/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(mono_depth_estimation)
 
+# Set C++ standard to 17
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(Threads)
 find_package(OpenCV REQUIRED)
 find_package(HailoRT REQUIRED)
