--- a/hailo_apps/cpp/pose_estimation/CMakeLists.txt
+++ b/hailo_apps/cpp/pose_estimation/CMakeLists.txt
@@ -1,85 +1,53 @@
 cmake_minimum_required(VERSION 3.11)
-project(pose_estimation CXX)
+project(pose_estimation)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(COMPILE_OPTIONS
-    -Werror -Wall -Wextra -Wconversion
-    -O3
-    -Wno-reorder -Wno-ignored-qualifiers -Wno-extra -Wno-unused-local-typedefs
-    -Wno-conversion -Wno-parentheses -Wno-unused-but-set-variable -Wno-array-bounds
-    -Wno-unused-value
-)
+set(COMPILE_OPTIONS -Werror -Wall -Wextra -Wconversion -O3 -Wno-reorder -Wno-ignored-qualifiers -Wno-extra -Wno-unused-local-typedefs -Wno-conversion -Wno-parentheses -Wno-unused-but-set-variable -Wno-array-bounds -Wno-unused-value)
 
-find_package(Threads REQUIRED)
+set(BASE_DIR /path/to/yolov8/example/folder)
+
+set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+set(CMAKE_HAVE_THREADS_LIBRARY 1)
+set(CMAKE_USE_WIN32_THREADS_INIT 0)
+set(CMAKE_USE_PTHREADS_INIT 1)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+
+find_package(Threads)
+
 find_package(HailoRT REQUIRED)
-find_package(OpenCV REQUIRED)
-message(STATUS "Found OpenCV: ${OpenCV_INCLUDE_DIRS}")
 
-# ---- xtl / xtensor ----
-# Prefer vendored headers under cpp/common/third_party to avoid toolchain/version
-# mismatches. If not present, fall back to system includes.
-set(THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../common/third_party")
+find_package( OpenCV REQUIRED)
+message(STATUS "Found OpenCV: " ${OpenCV_INCLUDE_DIRS})
 
-find_path(XTL_INCLUDE_DIR xtl/xoptional.hpp
-    PATH_SUFFIXES include
-    PATHS
-        "${THIRD_PARTY_DIR}/xtl/include"
-        /usr/include
-        /usr/local/include)
-if (NOT XTL_INCLUDE_DIR)
-    message(FATAL_ERROR "xtl headers not found. Please vendor them at ${THIRD_PARTY_DIR}/xtl/include or install xtl system-wide.")
-endif()
-message(STATUS "XTL_INCLUDE_DIR = ${XTL_INCLUDE_DIR}")
-
-find_path(XTENSOR_INCLUDE_DIR xtensor/views/xview.hpp
-    PATH_SUFFIXES include
-    PATHS
-        "${THIRD_PARTY_DIR}/xtensor/include"
-        /usr/include
-        /usr/local/include)
-if (NOT XTENSOR_INCLUDE_DIR)
-    # xtensor <= 0.24.x doesn't have xtensor/views/xview.hpp (it is xtensor/xview.hpp).
-    find_path(XTENSOR_INCLUDE_DIR xtensor/xview.hpp
-        PATH_SUFFIXES include
-        PATHS
-            "${THIRD_PARTY_DIR}/xtensor/include"
-            /usr/include
-            /usr/local/include)
-endif()
-if (NOT XTENSOR_INCLUDE_DIR)
-    message(FATAL_ERROR "xtensor headers not found. Please vendor them at ${THIRD_PARTY_DIR}/xtensor/include or install xtensor system-wide.")
-endif()
-message(STATUS "XTENSOR_INCLUDE_DIR = ${XTENSOR_INCLUDE_DIR}")
-
-file(GLOB SOURCES CONFIGURE_DEPENDS
-    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+file(GLOB SOURCES
+    ./*.cpp
 )
-list(APPEND SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/../common/toolbox.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/../common/hailo_infer.cpp
+list(APPEND SOURCES ../common/toolbox.cpp ../common/hailo_infer.cpp)
+include(ExternalProject)
+set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
+
+# External dependencies
+include(ExternalProject)
+ExternalProject_Add(xtl-test
+    GIT_REPOSITORY https://github.com/xtensor-stack/xtl
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/external
+)
+ExternalProject_Add(xtensor-test
+    GIT_REPOSITORY https://github.com/xtensor-stack/xtensor
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/external -Dxtl_DIR=${CMAKE_BINARY_DIR}/external/share/cmake/xtl/
 )
 
+
+include_directories(${EXTERNAL_INSTALL_LOCATION}/include)
+link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
+
+link_libraries(stdc++fs)
 add_executable(${PROJECT_NAME} ${SOURCES})
-file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/xtensor_compat/xtensor/core")
-file(WRITE "${CMAKE_BINARY_DIR}/xtensor_compat/xtensor/core/xeval.hpp" "#pragma once\n#include <xtensor/xeval.hpp>\n")
+add_dependencies(${PROJECT_NAME} xtl-test xtensor-test)
+include_directories(${OpenCV_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../common)
+include_directories(${ONNXRUNTIME_INCLUDE_DIR})
+target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS} -fconcepts)
+target_link_libraries(${PROJECT_NAME} HailoRT::libhailort ${CMAKE_THREAD_LIBS_INIT} ${OpenCV_LIBS})
 
-target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
-
-# Some toolchains (e.g., GCC 9) require this flag for C++20 concepts.
-target_compile_options(${PROJECT_NAME} PRIVATE -fconcepts)
-
-target_include_directories(${PROJECT_NAME} PRIVATE
-    ${OpenCV_INCLUDE_DIRS}
-    ${XTENSOR_INCLUDE_DIR}
-    ${XTL_INCLUDE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/../common
-)
-
-target_link_libraries(${PROJECT_NAME} PRIVATE
-    HailoRT::libhailort
-    Threads::Threads
-    ${OpenCV_LIBS}
-)
